# unitree-go2-mjx-rl

./: README.md  historical_todo.md  madrona-installation-server.txt  pyproject.toml  requirements.txt  todo.md  unitree-go2-mjx-ppo.ipynb
configs/: basic_lightweight_example.yaml  brax_example_unitree_go2.yaml  color_guided_joystick.yaml  color_guided_joystick_forward.yaml  color_guided_recurrent.yaml  color_guided_recurrent_debug.yaml  color_guided_recurrent_light.yaml  color_guided_target.yaml  color_map_blind_joystick.yaml  color_map_blind_joystick_baseline.yaml  color_map_blind_target.yaml  color_map_plain_rgb_target.yaml  color_map_privileged_joystick.yaml  color_map_privileged_target.yaml  color_map_vision_student.yaml  google_barkour_vb.yaml  google_barkour_vb_environment.yaml  guided_lightweight.yaml  guided_ppo.yaml  guided_ppo_example.yaml  joystick_basic.yaml  joystick_basic_ppo.yaml  joystick_basic_ppo_light.yaml  joystick_difficult.yaml  joystick_teacher_student.yaml  joystick_teacher_student_light.yaml  legacy_ppo_simple_vision.yaml  obstacle_avoiding.yaml  obstacle_avoiding_vision.yaml  obstacle_avoiding_vision_light.yaml  ppo_arena.yaml  ppo_enhanced.yaml  ppo_simple.yaml  randomized_tiles_blind.yaml  randomized_tiles_vision.yaml  raw_ppo.yaml  raw_ppo_example.yaml  render_basic.yaml  render_basic_example.yaml  render_ppo_simple.yaml  (+15 more)
notebooks/: Colab_NoRender_NoVision.ipynb  Preconfigured.ipynb  Universal.ipynb  clean-test-vision.ipynb  clean_test.ipynb  colab_experiments.ipynb  descriptions_and_sources.md  env_visualizer.ipynb  experimental.ipynb  google_deepmind_colab_apg_tutorial.ipynb  madrona_panda_experiment.ipynb  madrona_quadruped_experiment.ipynb  madrona_toy_experiment.ipynb  quick_tests.ipynb  unitree-go2-mjx-ppo.ipynb  (+1 more)
(+292 files in other folders)
