[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quadruped_mjx_rl"
version = "0.0.1"
description = "A Python package with multiple modules."
readme = "README.md"
authors = [
    { name = "Alexei Platzer", email = "alexei.platzer@tum.de" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "mujoco",
    "mujoco_mjx",
    "brax",
    "mediapy",
    "ml_collections",
    "pyyaml",
    "dacite",
    "jax",
    "numpy",
    "flax",
    "matplotlib",
    "orbax",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/alexeiplatzer/unitree-go2-mjx-rl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 96
