[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quadruped_mjx_rl"
version = "0.0.1"
description = "A Python package with multiple modules."
readme = "README.md"
authors = [
    { name = "Alexei Platzer", email = "alexei.platzer@tum.de" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "mujoco==3.3.4",
    "mujoco_mjx==3.3.4",
    "brax==0.12.4",
    "mediapy",
    "ml_collections",
    "pyyaml",
    "dacite==1.9.2",
    "jax==0.5.2",
    "numpy",
    "flax==0.10.6",
    "matplotlib",
    "orbax==0.1.9",
    "tqdm",
    "optax==0.2.4",
]

[project.urls]
Homepage = "https://github.com/alexeiplatzer/unitree-go2-mjx-rl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 96
